[metadata]
name = tp2ctl
version = 1.0.0
author = telecastr
author_email = telecastr@protonmail.com
description = Control IBM Trackpoint 2 Keyboard features (Trackpoint sensitivity, ...)
long_description = file: README.md
long_description_content_type = text/markdown
url = 
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux

[options]
packages = find:
python_requires = >=3
package_dir =
    = src

[options.entry_points]
console_scripts =
    tp2ctl = tp2ctl.tp2ctl:main 
    
[options.packages.find]
where = src